--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -1,8 +1,6 @@
 header {
 	background: $white;  
-	position: fixed;
 	width: 100%;
-	z-index: 9999999;
 	max-width: 1800px;
 
 	ul {
