--- a/scss/pages/_page.scss
+++ b/scss/pages/_page.scss
@@ -61,7 +61,7 @@
 	}
 
 	@include respond-below(sm) {
-		padding: 80px 20px 50px 20px; 
+		padding: 80px 0px 50px 0px; 
 	}
 }
 
